--- a/css/app.css
+++ b/css/app.css
@@ -1,8 +1,11 @@
 .toolbar{
     background-color: darkmagenta;
     color: whitesmoke;
-    text-align: center;
-    font-size: 25px;
+    font-family: "Myriad Pro";
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    font-size:25px;
 }
 .tabbar{
     background-color: darkorchid;
