--- a/css/app.css
+++ b/css/app.css
@@ -14,7 +14,7 @@ body{
     background-color: lightgreen;
 }
 .carousel{
-    height: 74%;
+    height: 86%;
 }
 .dot {
     height: 15px;
@@ -47,4 +47,12 @@ body{
   /* On smaller screens, decrease text size */
   @media only screen and (max-width: 300px) {
     .text {font-size: 11px}
+  }
+  h1{
+      color: black;
+      font-size: 20px;
+      font-family: 'Lora', serif;
+  }
+  .topic{
+      padding-left: 8px;
   }
