--- a/css/app.css
+++ b/css/app.css
@@ -16,6 +16,11 @@ body{
 .carousel{
     height: 86%;
 }
+.topic{
+    color: black;
+    font-family: 'Lora', serif;
+    font-size: 20px;
+}
 .dot {
     height: 15px;
     width: 15px;
@@ -44,14 +49,8 @@ body{
     to {opacity: 1}
   }
   
-  /* On smaller screens, decrease text size */
   @media only screen and (max-width: 300px) {
     .text {font-size: 11px}
-  }
-  h1{
-      color: black;
-      font-size: 20px;
-      font-family: 'Lora', serif;
   }
   .topic{
       padding-left: 8px;
