--- a/css/app.css
+++ b/css/app.css
@@ -20,6 +20,8 @@ body{
     color: black;
     font-family: 'Lora', serif;
     font-size: 20px;
+    padding-left: 8px;
+    padding-top: 5px;
 }
 .dot {
     height: 15px;
@@ -52,6 +54,4 @@ body{
   @media only screen and (max-width: 300px) {
     .text {font-size: 11px}
   }
-  .topic{
-      padding-left: 8px;
-  }
+ 
