--- a/css/app.css
+++ b/css/app.css
@@ -1,20 +1,45 @@
 body{
     background-color: white;
 }
+.container{
+
+}
 .toolbar{
     background-color: green;
     color: whitesmoke;
     font-family: "Myriad Pro";
-    margin: auto;
     display: flex;
     justify-content: center;
     font-size:25px;
+}
+.line{
+  display: flex;
+  color: lightgray;
+  border-style: solid;
+  border-width: 0.5px;
+}
+.book{
+  padding-left:8px;
+  padding-top:8px;
+  padding-bottom:8px;
+}
+.content{
+  display:flex;
+  align-items: center;
+  color: black;
+  font-family: 'Lora', serif;
+  font-size: 25px;
+}  
+.img{
+  color: azure;
+  border-style: solid;
+  border-width: 2px;
 }
 .tabbar{
     background-color: lightgreen;
 }
 .carousel{
-    height: 86%;
+    height: 80%;
 }
 .topic{
     color: black;
@@ -44,13 +69,11 @@ body{
   @-webkit-keyframes fade {
     from {opacity: .4} 
     to {opacity: 1}
-  }
-  
+  } 
   @keyframes fade {
     from {opacity: .4} 
     to {opacity: 1}
-  }
-  
+  } 
   @media only screen and (max-width: 300px) {
     .text {font-size: 11px}
   }
