--- a/css/app.css
+++ b/css/app.css
@@ -2,7 +2,37 @@ body{
     background-color: white;
 }
 .container{
-
+  display: flex;
+}
+.profile_pic{
+  color: darkmagenta;
+  border-radius: 50%;
+  border-style: solid;
+  margin: 15px;
+}
+.name{
+  align-items: center;
+  font-size: 25px;
+}
+.major{
+  align-items: center;
+  font-size: 20px;
+}
+.menu_box{
+  display: flex;
+  color: white;
+  border-style: solid;
+  border-width: 0.5px;
+}
+.menu{
+  background-color: lightgreen;
+  margin: 0 auto;
+  text-align: center;
+  color: white;
+  font-family: "Myriad Pro";
+  font-size: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 .toolbar{
     background-color: green;
